<resources>
    <string name="app_name">Meegos</string>
    <string name="action_settings">Settings</string>
    <string name="action_account">New Account</string>
    <string name="action_transactions">Transactions</string>

    <string name="permission_denied">Must allow all permission to use the app.</string>

    <!--    List options-->
    <string name="list_no_data">No data found</string>

    <string name="title_activity_history_contact_list">Contact History</string>
    <string name="deleted_success">Deleted success!</string>
    <string name="deleted_failed">You cannot delete this event!</string>
    <string name="chat_contact_list">Meegos Chat</string>

    <!--Log in-->
    <string name="login_title">Create new account</string>
    <string name="login_username_hint">Username</string>
    <string name="login_pass_hint">Password</string>
    <string name="login_sign_up">Sign up for Meegos</string>

<!--    Alias-->
    <string name="alias_title">Create alias for contact</string>
    <string name="alias_sign_up">Register Alias</string>
    <string name="alias_registered">Alias Registered</string>

    <!--    Chat Errors-->
    <string name="error_1">Error: Malformed xml</string>
    <string name="error_2">Error: Missing request id</string>
    <string name="error_3">Error: Malformed action request</string>
    <string name="error_4">Error: Missing action parameter</string>
    <string name="error_5">Error: Username already registered</string>
    <string name="error_6">Error: Missing message</string>
    <string name="error_7">Error: Invalid filter responseType</string>
    <string name="error_8">Error: Invalid action</string>
    <string name="error_9">Error: Missing action</string>
    <string name="error_10">Error: Invalid http method requested</string>
    <string name="error_11">Error: Username not registered</string>
    <string name="error_12">Error: Authentication fail</string>
    <string name="error_13">Error: Wrong parameter value</string>
    <string name="error_default">Error: Unknowed error code</string>
    <string name="min_alias_length">Minimum alia\'s length is 5</string>
    <string name="max_alias_length">Maximum alia\'s length is 12</string>
    <string name="min_username_length">Minimum username\'s length is 5</string>
    <string name="max_username_length">Maximum username\'s length is 12</string>
    <string name="min_password_length">Minimum password\'s length is 6</string>
    <string name="max_password_length">Maximum password\'s length is 10</string>
    <string name="min_message_length">Minimum message\'s length is 1</string>
    <string name="max_message_length">Maximum message\'s length is 200</string>
    <string name="server_listener_null">ServerListener con not be null</string>
    <string name="network_not_connected">Network is not connected</string>

    <!-- Contact Settings Titles -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_order">Ordering</string>
    <string name="title_filter">Filter</string>

    <!-- Messages Preferences -->
    <string name="order_by">Order by</string>
    <string name="criteria">Criteria</string>
    <string name="filter">Filter by</string>

    <!-- Key Preferences -->
    <string name="filter_call">Calls</string>
    <string name="filter_sms">SMS</string>
    <string name="filter_has_phone_number">Only with phone numbers</string>
    <string name="filter_sent">Sent</string>
    <string name="filter_received">Received</string>

    <!-- Notifications Strings -->
    <string name="notification_message_result_title_error">Error!</string>
    <string name="notification_message_result_title_success">Success!</string>
    <string name="notification_message_result_text_success">The message was successfully sent!</string>
    <string name="notification_message_result_text_error">There was an error sending the message!</string>
    <string name="notification_message_result_ticker_success">:)</string>
    <string name="notification_message_result_ticker_error">:(</string>
    <string name="notification_message_received_title">New message</string>
    <string name="notification_message_received_ticker">New message</string>
    <string name="notification_user_registered_title">User registered</string>
    <string name="notification_user_registered_text">Your user has been successfully registered!</string>
    <string name="notification_user_registered_ticker">User registered</string>

<!--    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>-->
<!--    <string name="attachment_summary_off">Only download attachments when manually requested</string>-->
</resources>
