<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_order">

        <ListPreference
            app:entries="@array/contact_order_by"
            app:entryValues="@array/contact_order_values"
            app:key="preference_contact_order_by"
            app:title="@string/order_by"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/contact_criteria"
            app:entryValues="@array/contact_criteria_values"
            app:key="preference_contact_criteria"
            app:title="@string/criteria"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_filter">

        <SwitchPreferenceCompat
            app:key="preference_contact_has_phone_number"
            app:title="@string/filter_has_phone_number" />

    </PreferenceCategory>

</PreferenceScreen>
