<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_order">

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/chat_order"
            app:entryValues="@array/chat_order_values"
            app:key="preference_chat_order"
            app:title="@string/order_by"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_filter">
        
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="preference_chat_sent_filtered"
            app:title="@string/filter_sent" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="preference_chat_received_filtered"
            app:title="@string/filter_received" />

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

    </PreferenceCategory>

</PreferenceScreen>
